# Tjost

./: .gitmodules  .travis.yml  CMakeLists.txt  LuaJIT-2.0.3-rt.patch  README.md  fltr_midi.c  fltr_tuio2.c  jack_osc.c  jack_osc.h  jack_osc.pc.in  mod_audio.h  mod_audio_in.c  mod_audio_out.c  mod_cv_in.c  mod_cv_out.c  mod_dump.c  mod_loopback.c  mod_midi_in.c  mod_midi_out.c  mod_net.c  mod_net.h  mod_net_in.c  mod_net_out.c  mod_osc.c  mod_osc.h  mod_osc_in.c  mod_osc_out.c  mod_raw_in.c  mod_raw_out.c  mod_read.c  mod_rtmidi_in.c  mod_rtmidi_out.c  mod_send.c  mod_seq_in.c  mod_seq_out.c  mod_serial.c  mod_timer.c  mod_transport.c  mod_uplink.c  mod_write.c  (+15 more)
examples/: blob.lua  bundle.lua  code.lua  gain.lua  loopback.lua  midi_shift.lua  mux.lua  net.lua  read.lua  read.r  tcp.lua  timer.lua  tmp.lua  unroll.lua  uplink.lua  write.lua
modules/: CMakeLists.txt  mod_audio.h  mod_audio_out.c  mod_cv.h  mod_cv_in.c  mod_cv_out.c  mod_dump.c  mod_loopback.c  mod_midi_in.c  mod_midi_out.c  mod_net.c  mod_net.h  mod_net_in.c  mod_net_out.c  mod_osc_in.c  mod_osc_out.c  mod_read.c  mod_rtmidi_in.c  mod_rtmidi_out.c  mod_send.c  mod_seq_in.c  mod_seq_out.c  mod_serial.c  mod_timer.c  mod_transport.c  mod_uplink.c  mod_write.c  rtmidi_c.cpp  rtmidi_c.h
